# language-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SVELTE_MIGRATION_PLAN.md  UI_ISSUES.md  package-lock.json  package.json  pyproject.toml  test-auth-flow.js
app/: __init__.py  auth.py  cedict.py  layout.tsx  models.py  page.tsx  persistence.py  server.py  utils.py
app/components/: TextComparison.tsx
app/persistence/: __init__.py  crud.py  db.py  jobs.py  models.py  profile.py  progress_sync.py  srs.py
app/pipeline/: processor.py  signatures.py
app/queue/: manager.py
app/routes/: __init__.py  admin.py  api.py  auth.py  jobs.py  translation.py
app/templates/: index.html  login.html  translations.html
docs/plans/: 2026-02-22-chat-layout-push.md  2026-02-22-chat-selection-ux-design.md
scripts/: gepa_segmentation.py  pyproject.toml
scripts-py/: gepa_segmentation.py  pyproject.toml  test_gepa_segmentation_paths.py
server/: .env.example  go.mod  go.sum  test-results.txt
server/app/: auth.py  config.py  models.py  server.py  templates_config.py
server/data/: language_app.db-shm  language_app.db-wal
server/docs/: openapi.yaml  (+2 more)
server_old/: pyproject.toml
server_old/app/persistence/: models.py  progress_sync.py
server_old/app/queue/: manager.py
server_old/app/routes/: translation.py
server_old/tests/: test_admin.py  test_persistence_api.py
tests/: test_admin.py  test_ocr.py  test_persistence.py  test_persistence_api.py  test_pipeline.py
web/: .biomeignore  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
(+283 files in other folders)
