[project]
name = "language-app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.0",
    "fastapi>=0.128.0",
    "itsdangerous>=2.1.0",
    "pillow>=10.0.0",
    "pypinyin>=0.53.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
